--- a/.gitignore
+++ b/.gitignore
@@ -20,9 +20,7 @@
 # production
 /build
 
-# misc
-.DS_Store
-*.pem
+
 
 # debug
 npm-debug.log*
@@ -38,3 +36,41 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+
+
+
+
+
+
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# Next.js
+.next
+out
+
+# Production
+build
+dist
+
+# Misc
+.DS_Store
+*.pem
+tsconfig.tsbuildinfo
+
+# Local ENV files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+
+# Vercel
+.vercel
+
+# Turborepo
+.turbo
+
+# Storybook
+storybook-static
