--- a/package.json
+++ b/package.json
@@ -12,23 +12,29 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.468.0",
+    "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.0.4"
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@shadcn/ui": "^0.0.4",
+    "@types/node": "^20",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.14.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.14",
-    "typescript": "^5.1.3",
-    "@types/node": "^20",
     "eslint-config-next": "15.0.4",
+    "postcss": "^8.4.47",
     "prettier": "^3.2.5",
-    "turbo": "^2.3.3"
+    "tailwindcss": "^3.4.14",
+    "turbo": "^2.3.3",
+    "typescript": "^5.1.3"
   },
   "packageManager": "pnpm@9.12.3",
   "engines": {
