--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,10 +20,7 @@
       }
     ],
     "paths": {
-      "@/*": ["src/*"],
-      "@lib/*": ["src/lib/*"],
-      "@components": ["src/components/index"],
-      "@components/*": ["src/components/*"]
+      "@/*": ["./src/*"],
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
